...
                modifier = Modifier.statusBarsPadding()
            )
        }
    }
}

const val ConversationTestTag = "ConversationTestTag"
private val JumpToBottomThreshold = 56.dp
private fun ScrollState.asBottom(): Boolean = value == 0

@Composable
fun Messages(
    messages: List<Message>,
...
