...
@Composable
fun ColumnScope.JetchatDrawer(onProfileClicked: (String) -> Unit, onChatClicked: (String) -> Unit) {
    Spacer(Modifier.windowInsetsTopHeight(WindowInsets.statusBars))
    DrawerHeader()
    DividerItem()
    DrawerItemHeader("Chats")
    ChatItem("composers", true) { onChatClicked("composers") }
    ChatItem("droidcon-nyc", false) { onChatClicked("droidcon-nyc") }
    DividerItem(modifier = Modifier.padding(horizontal = 28.dp))
    DrawerItemHeader(text = "Recent Profiles")
    ProfileItem(text = "Ali Conors(you)", profilePic = meProfile.photo) {
        onProfileClicked(meProfile.userId)
    }
...
